<resources>
    <string name="app_name">DIVIS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_settings">Settings</string>
    <string name="title_calibrate">Calibrate</string>
    <string name="title_data">Data</string>

	<!-- Shared Preferences -->
	<string name="saved_device_id">saved_device_id</string>
	<string name="saved_device_id_default"></string>
	<string name="saved_divis_id">saved_divis_id</string>
	<string name="saved_divis_id_default"></string>
	<string name="saved_app_version">saved_app_version</string>
	<string name="saved_app_version_default"></string>
	<string name="saved_location_id">saved_location_id</string>
	<string name="saved_location_id_default"></string>
	<string name="saved_location_name">saved_location_name</string>
	<string name="saved_location_name_default"></string>
	<string name="saved_location_detail">saved_location_detail</string>
	<string name="saved_location_detail_default"></string>
	<string name="saved_upper_sensor_depth">saved_upper_sensor_depth</string>
	<string name="saved_upper_sensor_depth_default">0</string>
	<string name="saved_lower_sensor_depth">saved_lower_sensor_depth</string>
	<string name="saved_lower_sensor_depth_default">0</string>
	<string name="saved_secci_depth">saved_secci_depth</string>
	<string name="saved_secci_depth_default">0</string>
	<string name="saved_data_refresh_rate">saved_data_refresh_rate</string>
	<string name="saved_data_refresh_rate_default">1000</string>

	<string name="saved_upper_x">saved_upper_x</string>
	<string name="saved_upper_x_default">100</string>
	<string name="saved_upper_y">saved_upper_y</string>
	<string name="saved_upper_y_default">100</string>
	<string name="saved_upper_radius">saved_upper_radius</string>
	<string name="saved_upper_radius_default">50</string>
	<string name="saved_lower_x">saved_lower_x</string>
	<string name="saved_lower_x_default">200</string>
	<string name="saved_lower_y">saved_lower_y</string>
	<string name="saved_lower_y_default">100</string>
	<string name="saved_lower_radius">saved_lower_radius</string>
	<string name="saved_lower_radius_default">50</string>
	<string name="saved_camera_exposure">saved_camera_exposure</string>
	<string name="saved_camera_exposure_default">0</string>
	<string name="saved_camera_resolution_index">99</string>
	<string name="saved_camera_resolution_index_default">99</string>
	<string name="saved_min_rgb_for_live_pixel">saved_min_rgb_for_live_pixel</string>
	<string name="saved_min_rgb_for_live_pixel_default">1</string>

	<!-- Settings screen -->
	<string name="settings_device_id">device_id</string>
	<string name="settings_divis_id">divis_id</string>
	<string name="settings_app_version">app_version</string>
	<string name="settings_location_id">location_id</string>
	<string name="settings_location_name">location_name</string>
	<string name="settings_location_detail">location_detail</string>
	<string name="settings_upper_sensor_depth">upper_Sensor_Depth (in)</string>
	<string name="settings_lower_sensor_depth">lower_Sensor_Depth (in)</string>
	<string name="settings_data_refresh_rate">data_refresh_rate</string>

	<!-- Calibrate screen -->
    <string name="calibrate_x">X</string>
    <string name="calibrate_y">Y</string>
    <string name="calibrate_size">Size</string>
    <string name="calibrate_upper">upper</string>
    <string name="calibrate_lower">lower</string>
    <string name="calibrate_exposure">Camera Exposure</string>
    <string name="calibrate_preview_resolution">Preview Resolution</string>
    <string name="calibrate_resolution">Capture Resolution</string>
    <!--string name="calibrate_min_rgb">Minimum rgb for live pixel</string-->
    <string name="calibrate_min_rgb">Live RGB Minimum</string>

	<!-- Data screen -->
	<string name="mCounter">mCounter</string>
	<string name="mLoggingToCSV">mLoggingToCSV</string>
	<string name="btn_write_csv">Log to CSV</string>
	<string name="btn_logging_on">Logging to CSV</string>
	<string name="btn_logging_off">Log to CSV</string>
	<string name="data_counter_prefix">Sample Count: </string>
	<string name="data_counter_zeroed">Sample Count: 0</string>
	<string name="data_column_upper">Upper</string>
	<string name="data_column_lower">Lower</string>
	<string name="data_timestamp">date_time</string>
	<string name="data_secci_depth">secci_depth</string>
	<string name="data_live_pixels">live_pixels</string>
	<string name="data_washed_pixels">washed_pixels</string>
	<string name="data_data_pixels">data_pixels</string>
	<string name="data_avg_r">avg_r</string>
	<string name="data_avg_g">avg_g</string>
	<string name="data_avg_b">avg_b</string>

	<!-- Messages -->
	<string name="confirm">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="msg_write_despite_blank_secci">secci_depth is blank.  Write to CSV anyway?</string>
	<string name="msg_csv_written">CSV Row Written!</string>
	<string name="msg_no_data_yet">No Data Yet!</string>
	<string name="crash_toast_text">Crashed!  Sending log to Developer</string>

	<!--memory analysis-->
	<string name="total_memory">total_memory</string>
	<string name="used_memory">used_memory</string>
	<string name="battery_level">battery_level</string>
	<string name="frag_calibrate_iv_canvas">frag_calibrate_iv_canvas</string>

	<!--Calibrate screen-->
	<string name="calibrate_column_title_x">X</string>
	<string name="calibrate_column_title_y">Y</string>
	<string name="calibrate_column_title_size">Size</string>
	<string name="calibrate_row_title_upper">upper</string>
	<string name="calibrate_row_title_lower">lower</string>

	<!--Preferences-->
	<string name="pref_filename">pref_filename</string>

</resources>
