<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/colorPrimary"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<com.example.m.divis.ToggleButtonWithFont
		android:id="@+id/btn_write_csv"
		style="@style/MyToggleButton"
		android:textOn="@string/btn_logging_on"
		android:textOff="@string/btn_logging_off"

		android:layout_width="match_parent"
		android:background="@drawable/toggle_button_background" />

	<com.example.m.divis.TextViewWithFont
		android:id="@+id/counter"
		style="@style/MyTextView"
		android:text="@string/data_counter_zeroed"
		android:gravity="center_horizontal"
		android:layout_marginBottom="24dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />




	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">


		<GridLayout
			android:id="@+id/data_grid"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:columnCount="3"
			android:orientation="horizontal">

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_timestamp"
				android:background="@drawable/bordered_background"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/timestamp"
				android:layout_columnSpan="2"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:layout_marginTop="24dp"
				android:text="@string/data_secci_depth"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.EditTextWithFont
				android:layout_marginTop="24dp"
				android:id="@+id/secci_depth"
				android:inputType="number"
				android:layout_columnSpan="2"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:layout_marginTop="24dp"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:layout_marginTop="24dp"
				android:text="@string/data_column_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:layout_marginTop="24dp"
				android:text="@string/data_column_lower"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_live_pixels"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/live_pixels_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/live_pixels_lower"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_washed_pixels"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/washed_pixels_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/washed_pixels_lower"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_data_pixels"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/data_pixels_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/data_pixels_lower"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_avg_r"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/avg_r_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/avg_r_lower"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_avg_g"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/avg_g_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/avg_g_lower"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:text="@string/data_avg_b"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/avg_b_upper"
				style="@style/GridTextViewBordered" />

			<com.example.m.divis.TextViewWithFont
				android:id="@+id/avg_b_lower"
				style="@style/GridTextViewBordered" />

			<!--<ImageView
				android:id="@+id/data_preview"
				android:layout_marginTop="24dp"
				android:layout_columnSpan="3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />-->

		</GridLayout>

	</ScrollView>

</LinearLayout>
