<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

	<GridLayout
		android:id="@+id/data_grid"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:columnCount="2"
		android:orientation="horizontal">

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_device_id"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/device_id"
			android:nextFocusForward="@+id/divis_id"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_divis_id"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/divis_id"
			android:nextFocusForward="@+id/app_version"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_app_version"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/app_version"
			android:nextFocusForward="@+id/location_id"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_location_id"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/location_id"
			android:nextFocusForward="@+id/location_name"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_location_name"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/location_name"
			android:nextFocusForward="@+id/location_detail"
			android:maxLength="25"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_location_detail"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/location_detail"
			android:nextFocusForward="@+id/upper_sensor_depth"
			android:maxLength="100"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_upper_sensor_depth"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/upper_sensor_depth"
			android:nextFocusForward="@+id/lower_sensor_depth"
			android:inputType="number"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_lower_sensor_depth"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/lower_sensor_depth"
			android:nextFocusForward="@+id/data_refresh_rate"
			android:inputType="number"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.TextViewWithFont
			android:text="@string/settings_data_refresh_rate"
			android:background="@drawable/bordered_background"
			style="@style/GridTextViewBordered" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/data_refresh_rate"
			android:inputType="number"
			style="@style/GridTextViewBordered" />

	</GridLayout>

</ScrollView>
