<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<FrameLayout
		android:id="@+id/camera_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		/>

	<!-- focusable to prevent EditText from showing keyboard immediately -->
	<!--
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:descendantFocusability="beforeDescendants"
		-->
	<GridLayout
		android:id="@+id/control_grid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:columnCount="4"
		android:rowCount="5"
		android:orientation="horizontal">
		<!-- android:focusableInTouchMode="true" -->

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:text="@string/calibrate_column_title_x" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:text="@string/calibrate_column_title_y" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:text="@string/calibrate_column_title_size" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:text="@string/calibrate_row_title_upper" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/upper_x"
			android:nextFocusForward="@+id/upper_y"
			style="@style/GridTextView"
			android:inputType="number"
			android:text="100" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/upper_y"
			android:nextFocusForward="@+id/upper_size"
			style="@style/GridTextView"
			android:inputType="number"
			android:text="100" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/upper_size"
			android:nextFocusForward="@+id/lower_x"
			style="@style/GridTextView"
			android:inputType="number"
			android:text="50" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:text="@string/calibrate_row_title_lower" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/lower_x"
			android:nextFocusForward="@+id/lower_y"
			style="@style/GridTextView"
			android:inputType="number"
			android:text="200" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/lower_y"
			android:nextFocusForward="@+id/lower_size"
			style="@style/GridTextView"
			android:inputType="number"
			android:text="100" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/lower_size"
			style="@style/GridTextView"
			android:inputType="number"
			android:text="50" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:background="@drawable/bordered_background"
			android:layout_height="48dp"
			android:layout_columnSpan="2"
			android:gravity="center_vertical"
			android:text="@string/calibrate_exposure" />

		<Spinner
			android:id="@+id/camera_exposure"
			style="@style/GridTextView"
			android:layout_height="48dp"
			android:background="@drawable/bordered_background"
			android:layout_columnSpan="2" />

		<!--com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:background="@drawable/bordered_background"
			android:layout_height="48dp"
			android:layout_columnSpan="2"
			android:text="@string/calibrate_preview_resolution" />

		<com.example.m.divis.TextViewWithFont
			android:id="@+id/camera_preview_resolution"
			style="@style/GridTextView"
			android:background="@drawable/bordered_background"
			android:layout_height="48dp"
			android:layout_columnSpan="2" /-->

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:background="@drawable/bordered_background"
			android:layout_height="48dp"
			android:layout_columnSpan="2"
			android:gravity="center_vertical"
			android:text="@string/calibrate_resolution" />

		<Spinner
			android:id="@+id/camera_resolution"
			style="@style/GridTextView"
			android:layout_height="48dp"
			android:background="@drawable/bordered_background"
			android:layout_columnSpan="2" />

		<com.example.m.divis.TextViewWithFont
			style="@style/GridTextView"
			android:background="@drawable/bordered_background"
			android:layout_height="48dp"
			android:layout_columnSpan="2"
			android:gravity="center_vertical"
			android:text="@string/calibrate_min_rgb" />

		<com.example.m.divis.EditTextWithFont
			android:id="@+id/min_rgb"
			style="@style/GridTextView"
			android:inputType="number"
			android:layout_columnSpan="2"
			android:text="1" />

	</GridLayout>

	<ImageView
		android:id="@+id/canvas"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentTop="true"
		android:layout_alignParentBottom="true"
		android:contentDescription="@string/frag_calibrate_iv_canvas"/>

</RelativeLayout>
